--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,15 +4,20 @@ WORKDIR /app
 COPY package*.json ./
 COPY tsconfig*.json ./
 COPY vite.config.ts ./
-COPY src ./src
+COPY index.html ./
 COPY public ./public
+COPY hero-images ./public/hero-images
+COPY src ./src
 RUN npm install && npm run build
 
 FROM node:20-alpine AS runner
 WORKDIR /app
 COPY --from=build /app/dist ./dist
-COPY package*.json ./
-RUN npm install --omit=dev
-ENV PORT=5173
-EXPOSE $PORT
-CMD ["npx", "serve", "./dist", "-l", "$PORT"]
+COPY docker-entrypoint.sh ./
+RUN npm install -g http-server && \
+    chmod +x docker-entrypoint.sh
+ENV API_BASE_URL=https://apiheroescall.8363742.xyz
+ENV IMAGE_BASE_URL=https://heroescall.8363742.xyz
+ENV SOCKET_URL=https://apiheroescall.8363742.xyz
+EXPOSE 5173
+CMD ["sh", "-c", "./docker-entrypoint.sh && http-server ./dist -p 5173 -a 0.0.0.0"]
