--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,49 @@
+# Dependencies
 frontend/node_modules/*
 backend/node_modules/*
+
+# Environment variables
+.env
+.env.local
+.env.production
+.env.development
+*.env
+
+# Database files
+*.sqlite
+*.sqlite3
+*.db
+backend/data/*.sqlite
+backend/data/*.sqlite3
+backend/data/*.db
+
+# Logs
+*.log
+logs/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build outputs
+frontend/dist/
+frontend/build/
+backend/dist/
+backend/build/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+.idea/
+*.swp
+*.swo
+*~
+
+# Temporary files
+*.tmp
+*.temp
+game_database.sqlite
