--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,19 +1,20 @@
 # Frontend Dockerfile
 FROM node:20-alpine AS build
 WORKDIR /app
-COPY package*.json ./
-COPY tsconfig*.json ./
-COPY vite.config.ts ./
-COPY index.html ./
-COPY public ./public
-COPY hero-images ./hero-images
-COPY src ./src
+COPY frontend/package*.json ./
+COPY frontend/tsconfig*.json ./
+COPY frontend/vite.config.ts ./
+COPY frontend/index.html ./
+COPY frontend/public ./public
+COPY frontend/hero-images ./hero-images
+COPY frontend/src ./src
 RUN npm install && npm run build
 
 FROM node:20-alpine AS runner
 WORKDIR /app
 COPY --from=build /app/dist ./dist
-COPY docker-entrypoint.sh ./
+COPY --from=build /app/hero-images ./dist/hero-images
+COPY frontend/docker-entrypoint.sh ./
 RUN npm install -g http-server && \
     chmod +x docker-entrypoint.sh
 ENV API_BASE_URL=https://apiheroescall.8363742.xyz
